--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 id="text">I am a .... </h1>
-    <div class="">
+    <div class="track">
         <label for="speed">speed</label>
         <input type="number" name="speed" id="speed" value="1" min="1" max="10" step="1">
     </div>
